--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BrainDrain</title>
-	<link rel="stylesheet" type="text/css" href="../static/style.css" />
+	<link rel="stylesheet" type="text/css" href="..\\static\\css\\style.css" />
 	<h2> Welcome to BrainDrain project </h2>
 <!--	<script type="text/javascript">
 		function hello() {
@@ -13,19 +13,17 @@
 	</script> -->
 </head>
 <body>
-<div>
-<ul>
-<li><a href="">Linux/Bash</li>
-<li><a href="">Networking</a></li>
-<li><a href="">Security</a></li>
-<li><a href="">Web</a></li>
-<li><a href="">DB</a></li>
-<li><a href="">Clouds</a></li>
-</ul>
+<div id="main-panel">
+	<ul>
+		<li><a href="">Linux/Bash</li>
+		<li><a href="">Networking</a></li>
+		<li><a href="">Security</a></li>
+		<li><a href="">Web</a></li>
+		<li><a href="">DB</a></li>
+		<li><a href="">Clouds</a></li>
+		<li><a href="">Pythons</a></li>
+	</ul>
 </div>	
-
-
-
 
 <footer>
 	<div id="basement">
