--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Log in</title>
+	<link rel="stylesheet" type="text/css" href="..\\static\\css\\style.css" />
 </head>
 <body>
 	<h1>You have to log in </h1>
